--- a/lst/compiler-crash-bugs.tex
+++ b/lst/compiler-crash-bugs.tex
@@ -41,7 +41,7 @@
 		}%
 		\label{lst:nvidia-compile-segfault}
 	}\\%
-	\subfloat[Configs.\ $3\pm$ assertion during code generation for storing pointer values.]{%
+	\subfloat[Configs.\ $3\pm$ assertion during code generation for pointer assignment.]{%
 		\noindent\mbox{\parbox{\columnwidth}{%
 				% cl_launcherCLgenResults/runtime_crash/bug-report-intel-30870.sh
 				\lstinputlisting{lst/bug1}%
