--- a/paper.tex
+++ b/paper.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
 
-\title{Plausible Test Case Generation for Identifying Compiler Bugs}
+\title{Plausible Test Case Generation for Compiler Fuzz Testing}
 % \date{}  % hides the date
 \maketitle
 
