--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -63,6 +63,8 @@ The 2357 \textbf{bf} results for CLSmith on Configs.\ $4\pm$ and $6\pm$ are all 
 % https://github.com/ChrisLidbury/CLSmith/issues/7
 
 
+Oclgrind was resilient to CLSmith testing, yet we managed to trip it up during compilation.
+
 \subsection{Analysis of bugs found}
 
 For all except configuration $3\pm$, CLgen exposes more compiler crashes than CLSmith. On average, CLgen hangs the compiler more frequently. We also submitted XX of the bugs found using CLSmith, after reduction.
