--- a/sec/bugs.tex
+++ b/sec/bugs.tex
@@ -23,6 +23,8 @@ Occasionally, the cause of the crash is unclear, as in Figures~\ref{lst:nvidia-r
 
 A bug in \texttt{clang::sema} has been forwarded to the LLVM folks.
 
+This kernel Figure~\ref{lst:crash-almost-everything} crashes all Intel compilers except, interestingly, the Intel i5-570.
+
 \input{lst/compiler-crash-bugs}
 
 \subsection{Runtime Crashes}
