--- a/abstract.tex
+++ b/abstract.tex
@@ -7,7 +7,7 @@ What is needed is a technique for biasing the random generation of programs so t
 
 We present a new approach for the generation of \emph{plausible} compiler test cases. We apply deep learning techniques over large corpuses of open source code fragments to learn models which describe the structure of common real world codes. We use these models to generate tens of thousands of source codes, and show how established differential testing methodologies can be used to expose bugs in compilers which are symptomatic of real hand-written code.
 
-We apply our technique to OpenCL, automatically exposing bugs in OpenCL compilers which are likely to arise from real world use cases, in a way which is not possible using existing techniques. In over 1,000 hours of automated commercial and open source compiler testing, we discover bugs in all of them, submitting XX bug reports to commercial and open source OpenCL implementations.
+We apply our technique to OpenCL, automatically exposing bugs in OpenCL compilers which are likely to arise from real world use cases, in a way which is not possible using existing techniques. In over 1,000 hours of automated commercial and open source compiler testing, we discover bugs in all of them, submitting XX bug reports. Our test cases are on average two orders of magnitude smaller than the state-of-the-art, and are evaluated $X\times$ faster, while maintaining comparable ratio of bugs found.
 
 % Our paper serves two purposes: first, we propose a novel methodology for compiler test case generation, capable of finding bugs at a faster rate and covering more areas of the compiler than existing approaches; second, we report on the state of OpenCL implementations.
 \end{abstract}
